# mcp-blueprint

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  mcp_client.py  mcp_client_http.py  mcp_server.py  pyproject.toml  requirements.txt  setup_interactive.py  test_connection.py  test_http_client.py  test_http_working.py  test_server.py  test_setup.py
.github/workflows/: ci.yml  release.yml  weekly-check.yml
examples/: README.md  basic_usage.py  ci_cd_workflow.py  custom_tools.py
src/mcp_devops/: __init__.py  __main__.py  client.py  server.py  server_http.py
tests/: conftest.py  test_client_unit.py  test_server.py  test_server_unit.py
